fix openOthreApp